# University

./: README.md
First_year/First_semester/Examine_task/: CMakeLists.txt  main.c
First_year/First_semester/LabWork_3/: CMakeLists.txt  code.c  code.h  main.c
First_year/First_semester/Labwork_2/: CMakeLists.txt  main.c
First_year/First_semester/Task_1/: CMakeLists.txt  main.c
First_year/First_semester/Task_2/: CMakeLists.txt  main.c
First_year/First_semester/Task_3/: main.c
First_year/First_semester/Task_4/: CMakeLists.txt  main.c
First_year/First_semester/TeoWork_1/: CMakeLists.txt  main.c
First_year/First_semester/TeoWork_3/: CMakeLists.txt  main.c
First_year/First_semester/TeoWork_4/: CMakeLists.txt  main.c
First_year/First_semester/TeoWork_5/: CMakeLists.txt  main.c
First_year/First_semester/TeoWork_6/: CMakeLists.txt  main.c
First_year/Second_semester/Algorithms/LabWork_3/: CMakeLists.txt  LabWork
First_year/Second_semester/Algorithms/LabWork_4/: CMakeLists.txt  LabWork  main.cpp
First_year/Second_semester/Algorithms/LabWork_5/: CMakeLists.txt  main.cpp
First_year/Second_semester/Algorithms/LabWork_6/: CMakeLists.txt  main.cpp
First_year/Second_semester/Coding/BitSet/: bitset.cpp  (+1 more)
First_year/Second_semester/Coding/LabWork_1/: CMakeLists.txt  dict.c  dict.h  main.c
First_year/Second_semester/Graphics/: РГР 1 вар 7.dwg
First_year/Second_semester/Testing/: CMakeLists.txt  main.cpp  test
Second_Year/Practice/DataAnalyzer/: main.py
Second_Year/Practice/FactumBreeze/: main.py  start_window.py
Second_Year/Practice/JSONMerger/: main.py
(+1205 files in other folders)
